--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         color: #1abc9c;
       }
       section {
-        padding: 60px 20px;
+        padding: 30px 20px;
       }
       h2 {
         color: #2c3e50;
@@ -88,8 +88,9 @@
       }
       .team-member {
         text-align: center;
-        margin: 20px;
+        margin: 15px;
         background: white;
+        width: 45%;
         padding: 20px;
         border-radius: 15px;
         box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
@@ -166,10 +167,11 @@
   <body>
     <!-- Cabeçalho -->
     <header>
-      <a href="https://www.sua-instituicao.com">
-        <img src="https://via.placeholder.com/150" alt="Logo da Instituição" />
-      </a>
-      <h1>CalcKal: Calculadora de Taxa Metabólica Basal (TMB)</h1>
+      <img
+        src="https://i.ibb.co/3yPkGW2p/Uni-Fil-Logo-Vertical-01.png"
+        style="width: 80px; height: 72px"
+      />
+      <h1>KiloCalc: Calculadora de Taxa Metabólica Basal (TMB)</h1>
       <nav>
         <a href="#inicio">Início</a>
         <a href="#proposta">Proposta</a>
@@ -270,9 +272,23 @@
     <section id="extensao-curricular">
       <h2>Extensão Curricular</h2>
       <p>
-        Este projeto faz parte de uma iniciativa de extensão curricular,
-        integrando conhecimentos teóricos e práticos para desenvolver soluções
-        que impactem positivamente a sociedade.
+        A Extensão Curricular é uma prática acadêmica que integra ensino,
+        pesquisa e impacto social. Seu principal objetivo é levar o conhecimento
+        universitário para além das salas de aula, conectando a academia com a
+        sociedade. Isso permite que estudantes apliquem na prática o que
+        aprendem, beneficiando tanto seu desenvolvimento quanto a comunidade.
+        Nosso projeto, o KiloCalc, é um exemplo dessa iniciativa! Criamos uma
+        plataforma acessível e gratuita para ajudar qualquer pessoa a entender
+        melhor sua Taxa Metabólica Basal (TMB) e seu gasto calórico diário.
+        Imagine que você está começando uma nova rotina alimentar ou de
+        exercícios e quer descobrir quantas calorias seu corpo realmente
+        precisa. Com o KiloCalc, basta inserir algumas informações básicas e, em
+        segundos, você terá um cálculo preciso da sua TMB. Além disso,
+        oferecemos explicações detalhadas sobre metabolismo, sugestões
+        personalizadas e dicas para otimizar sua alimentação e treinos. Tudo
+        isso 100% gratuito! Nosso compromisso é tornar o conhecimento sobre
+        nutrição mais acessível, ajudando as pessoas a tomarem decisões
+        informadas sobre sua saúde e bem-estar.
       </p>
     </section>
 
@@ -298,7 +314,7 @@
           />
           <h3>Gustavo Omodei</h3>
           <p>
-            Desenvolvedora Back-end: Responsável pela lógica e integração de
+            Desenvolvedor Back-end: Responsável pela lógica e integração de
             dados.
           </p>
         </div>
@@ -360,7 +376,7 @@
         Contato: <a href="mailto:email@exemplo.com">email@exemplo.com</a> |
         Redes Sociais: <a href="#">Instagram</a>, <a href="#">LinkedIn</a>
       </p>
-      <p>Desenvolvido por Equipe CalcKal - 2023</p>
+      <p>Desenvolvido por Equipe KiloCalc - 2025</p>
     </footer>
 
     <!-- Scripts -->
