--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CalcKal - Calculadora de TMB</title>
+    <title>KiloCalc - Calculadora de TMB</title>
     <link
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
@@ -309,7 +309,7 @@
         </div>
         <div class="team-member">
           <img
-            src="https://static.wixstatic.com/media/4cab2d_e57392f0dfcb411c9a5de85021a1e237~mv2.jpg/v1/fill/w_444,h_393,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/4cab2d_e57392f0dfcb411c9a5de85021a1e237~mv2.jpg"
+            src="https://media.licdn.com/dms/image/v2/D4D03AQFNSHS20VM5jg/profile-displayphoto-shrink_200_200/profile-displayphoto-shrink_200_200/0/1711897439198?e=1747872000&v=beta&t=8YQzp-xrpSjUQuJVyUyT1N-niLGLICmb3QeVoYBjwKI"
             alt="Maria Souza"
           />
           <h3>Gustavo Omodei</h3>
