uploads imagens diagramas

--- a/index.html
+++ b/index.html
@@ -900,14 +900,8 @@
       <h2>Diagramas do Projeto</h2>
       <div class="gallery">
         <img src="./assets/images/image.png" alt="Caso de Uso" />
-        <img
-          src="https://via.placeholder.com/400"
-          alt="Diagrama de Banco de Dados"
-        />
-        <img
-          src="https://via.placeholder.com/400"
-          alt="Arquitetura do Sistema"
-        />
+        <img src="./assets/images/workflow.png" alt="Workflow" />
+        <img src="./assets/images/implantacao.png" alt="Implantacao" />
       </div>
     </section>
 
