atualização imagem Caso de Uso

--- a/index.html
+++ b/index.html
@@ -899,7 +899,7 @@
     <section id="diagramas">
       <h2>Diagramas do Projeto</h2>
       <div class="gallery">
-        <img src="./assets/images/image.png" alt="Caso de Uso" />
+        <img src="./assets/images/casodeuso.png" alt="Caso de Uso" />
         <img src="./assets/images/workflow.png" alt="Workflow" />
         <img src="./assets/images/implantacao.png" alt="Implantacao" />
       </div>
