--- a/index.html
+++ b/index.html
@@ -399,6 +399,13 @@
         border-radius: 2px;
       }
 
+      #diagramas h2 {
+        color: #1abc9c;
+        font-size: 2.8em;
+        margin-bottom: 40px;
+        position: relative;
+      }
+
       /* Estilo para o container dos cards */
       .container-proposta {
         display: flex;
