--- a/index.html
+++ b/index.html
@@ -727,14 +727,14 @@
 
     <!-- Seção Inicial (Hero Section) -->
     <section id="inicio">
-      <h2>Bem-vindo ao CalcKal</h2>
+      <h2>Bem-vindo ao KiloCalc</h2>
       <p>
-        Seja bem-vindo ao MetaCalc, o app que ajuda você a calcular sua Taxa
+        Seja bem-vindo ao KiloCalc, o app que ajuda você a calcular sua Taxa
         Metabólica Basal (TMB) de forma rápida, precisa e gratuita. Descubra
         como entender melhor o seu metabolismo e otimizar sua saúde de maneira
         simples e acessível. Nosso objetivo é fornecer um cálculo confiável e
         intuitivo, utilizando fórmulas baseadas em ciência, explicações
-        detalhadas e sugestões personalizadas. Com o MetaCalc, você pode
+        detalhadas e sugestões personalizadas. Com o KiloCalc, você pode
         calcular sua TMB, entender seu gasto calórico diário e obter insights
         sobre nutrição e bem-estar, seja para perda de peso, ganho de massa ou
         manutenção.
